--- a/index.html
+++ b/index.html
@@ -1,13 +1,25 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="UTF-8">
-  <title>Web Offline iOS OK</title>
-  <link rel="stylesheet" href="/style.css">
-</head>
-<body>
-  <h1>✅ Website hoạt động khi mất mạng!</h1>
-  <img src="/logo.png" alt="Logo" width="150">
-  <script src="/app.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8">
+    <title>Offline Website</title>
+    <link rel="stylesheet" href="./style.css">
+  </head>
+
+  <body>
+    <div id="app">
+      <div class="main">You need offline to watch content</div>
+    </div>
+    <script src="./script.js"></script>
+    <script>
+      if ('serviceWorker' in navigator) {
+        navigator.serviceWorker.register('/service-worker.js')
+          .then(function(reg){
+              console.log("SW registration succeeded. Scope is "+reg.scope);
+          }).catch(function(err){
+              console.error("SW registration failed with error "+err);
+          });
+      }
+    </script>
+  </body>
 </html>
